--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
     <div id="container">
         <input id="display" readonly>
         <div class="buttons">
-            <button onclick="cleardisplay()">C</button>
-            <button><-</button>
-            <button class="opr" onclick="appendToDisplay('/')">/</button>
-            <button class="opr" onclick="appendToDisplay('*')">*</button>
-            <button onclick="appendToDisplay(7)">7</button>
-            <button onclick="appendToDisplay(8)">8</button>
-            <button onclick="appendToDisplay(9)">9</button>
-            <button class="opr" onclick="appendToDisplay('-')">-</button>
-            <button onclick="appendToDisplay(4)">4</button>
-            <button onclick="appendToDisplay(5)">5</button>
-            <button onclick="appendToDisplay(6)">6</button>
-            <button onclick="appendToDisplay('+')">+</button>
-            <button onclick="appendToDisplay(1)">1</button>
-            <button onclick="appendToDisplay(2)">2</button>
-            <button onclick="appendToDisplay(3)">3</button>
-            <button>=</button>
-            <button onclick="appendToDisplay(0)">0</button>
-            <button onclick="appendToDisplay('.')">.</button>
+            <button onclick="assign('C')">C</button>
+            <button onclick="backspace()"><-</button>
+            <button class="opr" onclick="assign('/')">/</button>
+            <button class="opr" onclick="assign('*')">*</button>
+            <button onclick="assign(7)">7</button>
+            <button onclick="assign(8)">8</button>
+            <button onclick="assign(9)">9</button>
+            <button class="opr" onclick="assign('-')">-</button>
+            <button onclick="assign(4)">4</button>
+            <button onclick="assign(5)">5</button>
+            <button onclick="assign(6)">6</button>
+            <button onclick="assign('+')">+</button>
+            <button onclick="assign(1)">1</button>
+            <button onclick="assign(2)">2</button>
+            <button onclick="assign(3)">3</button>
+            <button onclick="assign('=')">=</button>
+            <button onclick="assign(0)">0</button>
+            <button onclick="assign('.')">.</button>
         </div>
     </div>
     <script src="index.js"></script>
